fix: replace arrays by list