@@ -25,6 +25,7 @@ import java.io.FileInputStream;
 import java.io.IOException;
 import java.util.Collections;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Set;
 import org.apache.commons.io.IOUtils;
 import org.apache.poi.openxml4j.exceptions.InvalidFormatException;
@@ -66,7 +67,7 @@ public class FileValidatorTest {
         IOUtils.toByteArray(inputStream));
 
     assertThrows(ValidationException.class, () -> {
-      fileValidator.validate(Collections.singletonList(multipartFile), true, false);
+      fileValidator.validate(List.of(multipartFile), true, false);
     });
   }
 
